@startuml
class RennenController {
+ {static} String PATH_TO_FXML
+ {static} String SCENE_NAME
~ GridPane rennen_grid_root
~ Label rennen_lb_streckenName
~ VBox rennen_vbox_info
~ Label rennen_lb_rennInfos
~ Label rennen_lb_anzStreckenRunden
~ Group rennen_group_strecke
~ GridPane rennen_grid_spieler_info
~ Button rennen_bn_rennenBeenden
~ Button rennen_bn_weiter
- double B_MAX_PIXEL
- double H_MAX_PIXEL
- Spieler aktiver_spieler
- Rennstrecke rennstrecke
- ArrayList<Spieler> mitspieler
- ArrayList<Spieler> spieler
- String[] farben
- HashMap<Spieler,String> zurordnung_spieler_farbe
- URL url_to_stylesheet
- Umrechnung_grid_pixel umrechnung_grid_pixel
- HashMap<Spieler,Rennen_spieler_info_labels> zurordnung_spieler_infoLabels
- Rennen_start_positionen_waehlen rennen_start_positionen_waehlen
- HashMap<Spieler,Spieler_fahrverlauf> rueckgabe_von_rennverlauf_zuordnung_spieler_spielerFahrverlauf
}

class Umrechnung_grid_pixel {
- double B_RAND_GRID
- double H_RAND_GRID
+ double CLICK_TOLERANZ_GRID
- double B_MAX_PIXEL
- double H_MAX_PIXEL
- double B_STRECKE_PIXEL_MIT_RAND
- double H_STRECKE_PIXEL_MIT_RAND
- int B_STRECKE_GRID_OHNE_RAND
- int H_STRECKE_GRID_OHNE_RAND
- double B_STRECKE_GRID_MIT_RAND
- double H_STRECKE_GRID_MIT_RAND
+ double B_1GRID_IN_PIXEL
+ double H_1GRID_IN_PIXEL
}

class Rennstrecke {
- String name
- boolean is_standartstrecke
- int breite
- int hoehe
- ArrayList<Linie> streckenlinien
- Linie startlinie
- boolean is_startrichtung_nach_unten_oder_rechts
- int anz_runden
}

class Spieler {
- String name
- HashMap<String,Double> strecken_bestzeiten
}



class Rennen_spieler_info_labels {
- Label lb_spieler_name
- Label lb_spieler_runde
- Label lb_spieler_zeit
- Label lb_spieler_status
- String spieler_farbe
- int anz_runden_der_strecke
- String path_to_stylesheet
- String CSS_STYLE_CLASS_LABEL_SMALL
}






'' Beziehungen
RennenController *-- Umrechnung_grid_pixel
RennenController *-- Rennstrecke
RennenController "1" *-- "1 aktiver Spieler" Spieler
RennenController "1" *-- "0...3 Mitspieler" Spieler

RennenController "1" *-- "1...4" Rennen_spieler_info_labels




@enduml